--- a/index.html
+++ b/index.html
@@ -69,12 +69,13 @@
               colaborativo, me gusta crear diseños que inspiren e involucren a
               las personas. Como diseñador UI, considero que un buen producto no
               solo brinda una solución sino que permite crear una experiencia
-              emocional en las personas que lo usan. En mi proceso creativo
-              utilizo herramientas como Figma, Adobe XD, Photoshop e Illustrator
-              que me ayudan mucho en el flujo de trabajo para la producción de
-              interfaces de usuario.
+              emocional en las personas que lo usan.
+              <br />
+              En mi proceso creativo utilizo herramientas como Figma, Adobe XD,
+              Photoshop e Illustrator que me ayudan mucho en el flujo de trabajo
+              para la producción de interfaces de usuario.
             </p>
-            <button class="presentacion__button">
+            <button class="presentacion__button-card">
               <span class="presentacion__button-content">
                 Mas acerca de mi
               </span>
@@ -96,45 +97,43 @@
           <picture>
             <source
               srcset="img/conTituloDesktop.png"
-              media="(min-width: 720px)"
+              media="(min-width: 360px)"
             />
-            <img src="img/pequeña.png" alt="imgMobile" />
+            <img class="main__img" src="img/pequeña.png" alt="imgMobile" />
           </picture>
         </div>
         <div class="main__card">
           <picture>
             <source
               srcset="img/conTituloDesktop.png"
-              media="(min-width: 720px)"
+              media="(min-width: 360px)"
             />
-            <img src="img/pequeña.png" alt="imgMobile" />
+            <img class="main__img" src="img/pequeña.png" alt="imgMobile" />
           </picture>
         </div>
         <div class="main__card">
           <picture>
             <source
               srcset="img/conTituloDesktop.png"
-              media="(min-width: 720px)"
+              media="(min-width: 360px)"
             />
-            <img src="img/pequeña.png" alt="imgMobile" />
+            <img class="main__img" src="img/pequeña.png" alt="imgMobile" />
           </picture>
         </div>
         <div class="main__card">
           <picture>
             <source
               srcset="img/conTituloDesktop.png"
-              media="(min-width: 720px)"
+              media="(min-width: 360px)"
             />
-            <img src="img/pequeña.png" alt="imgMobile" />
+            <img class="main__img" src="img/pequeña.png" alt="imgMobile" />
           </picture>
         </div>
       </div>
 
       <div class="main__button-container">
         <button class="main__button">
-          <a class="main__button-link" href="https://www.behance.net/"
-            >Ver más en Behance
-          </a>
+          Ver más en Behance
           <img class="main__button-icon" src="img/arrow-right.svg" alt="more" />
         </button>
       </div>
@@ -142,13 +141,13 @@
 
     <footer class="footer">
       <img class="footer__logo" src="img/Logo.png" alt="Logo" />
-      <p class="footer__link">Inicio</p>
+      <p class="footer__link footer__link--color">Inicio</p>
       <p class="footer__link">Acerca de mi</p>
       <p class="footer__link">Proyectos</p>
-      <p class="footer__link">Contáctame</p>
+      <p class="footer__link footer__link--color">Contáctame</p>
       <p class="footer__link">Correo</p>
       <p class="footer__link">LinkedIn</p>
-      <p class="footer__link">Social</p>
+      <p class="footer__link footer__link--color">Social</p>
       <div class="footer__icon-container">
         <img class="footer__img" src="img/Behance.svg" alt="Behance" />
         <img class="footer__img" src="img/Linkendl.svg" alt="Linkedin" />
