--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
   <body>
     <header class="header">
-      <img class="header__logo" src="img/Logo.png" alt="Logo" />
+      <a href="./index.html">
+        <img class="header__logo" src="img/Logo.png" alt="Logo" />
+      </a>
       <nav class="header__navbar">
         <div class="header__img-container" id="headerImgContainer">
           <img
@@ -36,7 +38,7 @@
             <a class="header__link" href="#inicio">Inicio</a>
           </li>
           <li class="header__item">
-            <a class="header__link" href="#acercaDeMi">Acerca de mí</a>
+            <a class="header__link" href="./acercaDeMi.html">Acerca de mí</a>
           </li>
           <li class="header__item">
             <a class="header__link" href="#proyectos">Proyectos</a>
@@ -88,7 +90,7 @@
               Photoshop e Illustrator que me ayudan mucho en el flujo de trabajo
               para la producción de interfaces de usuario.
             </p>
-            <button class="presentacion__button-card">
+            <button class="presentacion__button-card" id="proyectos">
               <span class="presentacion__button-content">
                 Mas acerca de mi
               </span>
@@ -103,7 +105,7 @@
       </div>
     </section>
 
-    <main class="main" id="proyectos">
+    <main class="main">
       <h2 class="main__title">Proyectos</h2>
       <div class="main__container">
         <div class="main__card">
